--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,9 +4,13 @@
 </head>
 <style>
     .container{
-        max-width: 800px;
-        font-family: sans-serif;
-        color: grey;
+    max-width: 800px;
+    font-family: sans-serif;
+    color: grey;
+    margin: auto;
+    padding-top: 60px;
+    padding-left: 20px;
+    padding-right: 20px;
     }
 </style>
 <body>
