--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <title>Article Three: Jery George</title>
+    <link href="/ui/style.css" rel="stylesheet" />
 </head>
 <body>
     <div class="container">
