[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div id="main-text" class="center text-big bold">
-            Hi! I am Jery and this is my webapp.
+            This is my webapp.
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
