--- a/ui/index.html
+++ b/ui/index.html
@@ -4,14 +4,24 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img id="madi" src="/ui/madi.png" class="img-medium"/>
+        <div class='container'>
+            <div class="center">
+                <img id="madi" src="https://3.bp.blogspot.com/-W__wiaHUjwI/Vt3Grd8df0I/AAAAAAAAA78/7xqUNj8ujtY/s1600/image02.png" class="img-medium"/>
+            </div>
+            <hr>
+            <h3>Personal:</h3>
+            <div>My Name is Jery George K</div>
+            <hr>
+            <h3>Professional:</h3>
+            <div>
+                I work as a freelancer
+            </div>
+            <br>
+            <div id="main-text" class="center text-big bold">
+                This is my webapp.
+            </div>
         </div>
-        <br>
-        <div id="main-text" class="center text-big bold">
-            This is my webapp.
-        </div>
-        <script type="text/javascript" src="/ui/main.js">
+            <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
 </html>
