--- a/ui/index.html
+++ b/ui/index.html
@@ -20,6 +20,9 @@
             <div id="main-text" class="center text-big bold">
                 This is my webapp.
             </div>
+            <div class='footer'>
+                This <button id="counter"> Click Me!</button>  has been clicked <span id="count" >0</span> times.
+            </div>
         </div>
             <script type="text/javascript" src="/ui/main.js">
         </script>
