--- a/ui/index.html
+++ b/ui/index.html
@@ -19,6 +19,12 @@
             <br>
             <div class='footer'>
                 This button <button id="counter"> Click Me!</button>  has been clicked <span id="count" >0</span> times.
+                <br>
+                <input type="text" id="name" placeholder='name'></input>
+                <input type="submit" value="Submit"></input>
+                <ul>
+                    
+                </ul>
             </div>
         </div>
             <script type="text/javascript" src="/ui/main.js">
