--- a/ui/index.html
+++ b/ui/index.html
@@ -16,14 +16,14 @@
             <div>
                 I work as a freelancer
             </div>
-            <br>
+            <hr>
             <div class='footer'>
                 This button <button id="counter"> Click Me!</button>  has been clicked <span id="count" >0</span> times.
                 <br>
                 <input type="text" id="name" placeholder='name'></input>
                 <input type="submit" value="Submit"></input>
                 <ul>
-                    
+                    <li>name1</li>
                 </ul>
             </div>
         </div>
