[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -22,8 +22,7 @@
                 <br>
                 <input type="text" id="name" placeholder='name'></input>
                 <input type="submit" value="Submit"></input>
-                <ul>
-                    <li>name1</li>
+                <ul id='namelist'>
                 </ul>
             </div>
         </div>
