--- a/ui/index.html
+++ b/ui/index.html
@@ -19,9 +19,9 @@
             <hr>
             <div class='footer'>
                 This button <button id="counter"> Click Me!</button>  has been clicked <span id="count" >0</span> times.
-                <br>
-                <input type="text" id="name" placeholder='name'></input>
-                <input type="submit" value="Submit"></input>
+                <hr>
+                <input type="text" id="name" placeholder='name'>
+                <input type="submit" value="Submit">
                 <ul id='namelist'>
                 </ul>
             </div>
